Pro changes design and update flow